Added ordered list and minor changes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1>This is the biggest heading</h1>
     <h2>This is the second biggest heading</h2>
     <p>This is normal text. This is a free flowing text meaning it will wrap at the end just like paragraphs.</p>
+    <p>This para has a <strong>bold</strong> text.</p>
     <small>This is small text.</small>
     
     <hr>
@@ -46,15 +47,20 @@
         <li>Item one</li>
         <li>Iteam two</li>
         <li>Iteam three</li>
-
     </ul>
 
     <ul class="list-non-bullet" >
         <li class="list-iteam-inline">Inline Iteam one</li>
         <li class="list-iteam-inline">Inline Iteam Two</li>
         <li class="list-iteam-inline">Inline iteam three</li>
-
     </ul>
+
+    <h3>Ordered List</h3>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ol>
 
     <h3>Revered Ordered list</h3>
     <ol reversed>
