--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Component Library</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Abhishek's Component Library</h1>
@@ -28,15 +29,15 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class="container">This is a fluid container and it will go till the end of the page</div>
     <h3>center container</h3>
-    <div>This is a centered container and it will go till the end of the specified width</div>
+    <div class="container container-center">This is a centered container and it will go till the end of the specified width</div>
 
     <hr>
 
     <h2>@links</h2>
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
 
@@ -72,45 +73,49 @@
     <hr>
 
     <h2>@nav</h2>
-    <nav>
-        <div>Brand Name</div>
-        <ul>
-            <li><a href="/">home</a></li>
-            <li><a href="/">products</a></li>
-            <li><a href="/">about</a></li>
+    <nav class="navigation container">
+        <div class="nav-brand">Brand Name</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline"><a class="link link-active" href="/">home</a></li>
+            <li class="list-item-inline"><a class="link" href="/">products</a></li>
+            <li class="list-item-inline"><a class="link" href="/">about</a></li>
         </ul>
     </nav>
 
     <hr>
 
     <h2>@Hero Image</h2>
-    <header>
-        <img src="images/hero.svg">
-        <h1>heading inside the hero</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg">
+        <h1 class="hero-heading">heading inside the hero</h1>
     </header>
 
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h3>white section</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis hic, omnis ad pariatur dolor delectus veniam. Soluta saepe tenetur reprehenderit autem fugiat ut inventore? Illum libero mollitia reiciendis nihil tempore.</p>
+        </div>
     </section>
 
-    <section>
-        <h3>off white section</h3>
-        <p>This will have gray background</p>
+    <section class="section ow">
+        <div class="container container-center">
+            <h3>off white section</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ea consectetur dolor perferendis. Provident at, labore facilis hic illum, itaque explicabo saepe similique autem velit quos ratione repudiandae expedita eligendi.</p>
+        </div>
     </section>
 
     <hr>
 
     <h2>@footer</h2>
-    <footer>
-        <div>some small heading inside footer</div>
-        <ul>
-            <li>socialone</li>
-            <li>socialtwo</li>
-            <li>socialthree</li>
+    <footer class="footer">
+        <div class="footer-header">some small heading inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="">socialone</a></li>
+            <li class="list-item-inline"><a class="link" href="">socialtwo</a></li>
+            <li class="list-item-inline"><a class="link" href="">socialthree</a></li>
         </ul>
     </footer>
 
